# bookstore

./: Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  settings_testes.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: factories.py  test_order_viewset.py  test_orders.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_category_description.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: factories.py  test_category.py  test_category_viewset.py  test_product.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
